--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/node": "^9.5.2",
     "@astrojs/react": "^4.2.0",
+    "@astrojs/vercel": "^9.0.4",
     "@google/genai": "^1.35.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tailwindcss/vite": "^4.0.0",
